--- a/_config.yml
+++ b/_config.yml
@@ -35,7 +35,7 @@ titlecase: false # Transform title into titlecase
 external_link: true # Open external links in new tab
 filename_case: 0
 render_drafts: false
-post_asset_folder: false
+post_asset_folder: true
 relative_link: false
 future: true
 highlight:
@@ -79,7 +79,7 @@ theme: next
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
   type: git
-  repo: 'https://github.com/KilFront/KilFront.github.io.git'
+  repo: git@github.com:KilFront/KilFront.github.io.git
   branch: master
 
 #add other
