--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@
 # Site
 title: Kil Notes
 subtitle: Quick notes
-description: 潜心修行，任重道远
+description: 心如止水，潜心修行
 keywords:
 author: kil
 language: zh-Hans
